--- a/contacte.html
+++ b/contacte.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/responsive/max-600px.css" media="(max-width: 600px)">
     <link rel="stylesheet" type="text/css" href="css/responsive/min-1024px.css" media="(min-width: 1024px)">
     <link rel="stylesheet" type="text/css" href="css/fonts/genericons/genericons.css" media="all"/>
+    <link rel="stylesheet" type="text/css" href="css/HideEditX.css">
 </head>
 <body>
 
@@ -101,6 +102,7 @@
                     <th>Nume</th>
                     <th>Prenume</th>
                     <th>Telefon</th>
+                    <th>Actiune</th>
                 </tr>
                 </thead>
                 <tbody>
