Rev Home lab din 18 iulie Add contact remove contact using link

--- a/contacte.html
+++ b/contacte.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" type="text/css" href="css/responsive/max-600px.css" media="(max-width: 600px)">
     <link rel="stylesheet" type="text/css" href="css/responsive/min-1024px.css" media="(min-width: 1024px)">
     <link rel="stylesheet" type="text/css" href="css/fonts/genericons/genericons.css" media="all"/>
-    <link rel="stylesheet" type="text/css" href="css/HideEditX.css">
 </head>
 <body>
 
@@ -90,10 +89,10 @@
         <div id="content">
             <div id="breadcrumb">HOME : welcome home</div>
 
-            <form action="#" id="contact-form">
-                <input type="text" placeholder="Nume">
-                <input type="text" placeholder="Prenume">
-                <input type="text" placeholder="Telefon">
+            <form action="date/add.html" id="contact-form">
+                <input type="text" name="lastName" placeholder="Nume">
+                <input type="text" name="firstName" placeholder="Prenume">
+                <input type="text" name="phone" placeholder="Telefon">
                 <button>Add</button>
             </form>
             <table id="contacts-list">
