--- a/contacte.html
+++ b/contacte.html
@@ -90,9 +90,10 @@
             <div id="breadcrumb">HOME : welcome home</div>
 
             <form action="date/add.php" id="contact-form">
-                <input type="text" name="lastName" placeholder="Nume">
-                <input type="text" name="firstName" placeholder="Prenume">
-                <input type="text" name="phone" placeholder="Telefon">
+                <input type="hidden" name="id">
+                <input type="text" name="lastName" placeholder="Nume" required>
+                <input type="text" name="firstName" placeholder="Prenume" required>
+                <input type="text" name="phone" placeholder="Telefon" required>
                 <button>Add</button>
             </form>
             <table id="contacts-list">
