save/list/remove contacts from json files using php + comments

--- a/contacte.html
+++ b/contacte.html
@@ -89,20 +89,21 @@
         <div id="content">
             <div id="breadcrumb">HOME : welcome home</div>
 
-            <form action="date/add.php" id="contact-form">
+            <form action="date/save.php" id="contact-form">
                 <input type="hidden" name="id">
                 <input type="text" name="lastName" placeholder="Nume" required>
                 <input type="text" name="firstName" placeholder="Prenume" required>
                 <input type="text" name="phone" placeholder="Telefon" required>
-                <button>Add</button>
+                <button>Save</button>
             </form>
+
             <table id="contacts-list">
                 <thead>
                 <tr>
                     <th>Nume</th>
                     <th>Prenume</th>
                     <th>Telefon</th>
-                    <th>Actiune</th>
+                    <th>Acțiuni</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -131,19 +132,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
